--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@
               <h5>2019 - 2021</h5>
               <p><em>Toole Design, Silver Spring, MD </em></p>
               <ul>
-                <li>Led in the design, development, and implementation of active transportation plans and safety analyses</li>
+                <li>Led in the design, development, and implementation of active transportation plans and safety analyses.</li>
                 <li>Delegated tasks to and supported the success of team members to deliver project components. </li>
                 <li>Assessed analyses, reports, maps, and graphics to ensure quality and accuracy.</li>
-                <li>Oversaw the efficient use of production project budgets ranging from $5,000 - $150,000+</li>
+                <li>Oversaw the efficient use of production project budgets ranging from $5,000 - $150,000+.</li>
               </ul>
             </div>
             <div class="resume-item">
