--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="profile justify-content-center align-items-center">
         <img src="assets/img/profile-img-bw2.png" alt="Thomas Headshot" class="img-fluid rounded-circle">
         <div class="d-flex flex-column justify-content-center align-items-center">
-          <h1 class="text-light justify-content-center align-items-center"><a href="index.html">Thomas Hillman, AICP</a></h1>
+          <h1 class="text-light justify-content-center align-items-center"><a href="index.html">Thomas N. Hillman, AICP</a></h1>
         </div>
         <div class="social-links mt-3 text-center">
           <a href="mailto:thomasnhillman@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
@@ -72,7 +72,7 @@
       <h1>Thomas N. Hillman, AICP</h1>
     </div>
     <div class="hero-container" data-aos="fade-in">
-      <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe, Livable "></span>Mobility Planning and Policy</p>
+      <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe, Livable "></span>Mobility Planning</p>
     </div>  
      </section><!-- End Hero -->
 
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas is an urban planning and policy professional who creates safe, equitable, and sustainable transportation networks where people can live and move healthily.</p> 
+          <p>Thomas is an urban planner who creates safe, equitable, and sustainable transportation networks where people can live and move healthily.</p> 
           <br>
           <p>He has led Vision Zero analyses, authored State Highway Safety Plans and Safe Routes to School Plans, contributed to multiple Active Transportation Plans, and provided roadway design guidance and technical assistance to diverse public and private stakeholders.</p>
         </div>
