--- a/ite-micromobility.html
+++ b/ite-micromobility.html
@@ -180,7 +180,7 @@
                 <li><strong>Category</strong>: Design Competition</li>
                 <li><strong>Organization</strong>: Institute of Transportation Engineers (ITE)</li>
                 <li><strong>Project date</strong>: Summer 2020</li>
-                <li><strong>Project URL</strong>: <a href="assets/img/portfolio/ite-micromobility/Designing_for_Micromobility.pdf" target="_blank">Download Report</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.dropbox.com/s/h64ue8h30m6c8iq/Designing_for_Micromobility.pdf" target="_blank">Download Report</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
