--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <li>Oversaw the efficient use of production budgets ranging from $5,000 - $150,000+.</li> 
                 <li>Delegated tasks to and supported team members to deliver project components.</li>
                 <li>Created plan maps and graphics in GIS and Illustrator. Assessed analyses, reports, maps, and graphics to ensure quality and accuracy.</li>
-                <li>Selected Vision Zero and Safe Routes to School design, policy, and countermeasure recommendations.</li>
+                <li>Recommended Vision Zero and Safe Routes to School designs, policies, and countermeasures.</li>
                 <li>Presented webinars and led community and stakeholder meetings including charrettes and public engagement events.</li>
               </ul>
             </div>
