--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas is an urban planner who creates safe, equitable, and sustainable transportation networks where people can live and move healthily.</p> 
+          <p>Thomas is an urban planner who helps communities create safer, more equitable, and more sustainable transportation systems.</p> 
           <br>
           <p>He has led Vision Zero analyses, authored State Highway Safety Plans and Safe Routes to School Plans, contributed to multiple Active Transportation Plans, and provided roadway design guidance and technical assistance to diverse public and private stakeholders.</p>
         </div>
