--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas is an urban planner who helps communities create safer, more equitable, and more sustainable transportation systems.</p> 
+          <p>Thomas is an urban planner who helps create safer, more equitable, and more sustainable transportation systems.</p> 
           <br>
-          <p>He has led Vision Zero analyses, authored State Highway Safety Plans and Safe Routes to School Plans, contributed to multiple Active Transportation Plans, and provided roadway design guidance and technical assistance to diverse public and private stakeholders.</p>
+          <p>He has led Vision Zero analyses, authored State Highway Safety Plans and Safe Routes to School Plans, contributed to multiple Active Transportation Plans, and provided roadway design guidance and technical assistance to communites across the country.</p>
         </div>
 
         <div class="row">
