--- a/index.html
+++ b/index.html
@@ -84,9 +84,12 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas is an urban planner who helps create safer, more equitable, and more sustainable transportation systems.</p> 
-          <br>
-          <p>He has led Vision Zero analyses, authored State Highway Safety Plans and Safe Routes to School Plans, contributed to multiple Active Transportation Plans, and provided roadway design guidance and technical assistance to communites across the country.</p>
+          <p>Thomas has dedicated the past seven years of his career to building and managing partnerships with government, non-profit and private stakeholders that embrace alternative and emerging transportation approaches in an era of dynamic mobility challenges and opportunities. By leading plans, policies, programs, and infrastructure investments that create more walkable, bikeable, and transit-friendly places, he has helped improve climate and social resilience in communities across the country.</p>
+
+          <p>In his career, he has managed array of transportation projects from Vision Zero safety analyses to street design guidelines and mobility hub playbooks that make travel using transit and alternative modes more seamless and intuitive. He has contributed to multiple State Highway Safety Plans and Active Transportation Plans; led walk audits and Safe Routes to School travel plans; conducted complex demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has designed bikeshare stations and evaluated transportation programs for cities and MPOs.</p>
+          
+          <p>Thomas earned his Masters in City and Regional Planning, with a focus on Transportation Planning and a Graduate Certificate in Public Policy, from the Edward J. Bloustein School of Planning and Public Policy at Rutgers, the State University of New Jersey. He holds a BA in Political Studies with a concentration in Latin American Studies from Bard College.</p>
+          
         </div>
 
         <div class="row">
@@ -186,8 +189,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>A divergent thinker with a growth mindset, Thomas is always learning new ways to solve transportaion problems.</p> 
-        </div>
+          <!--<p>A divergent thinker with a growth mindset, Thomas is always learning new ways to solve transportaion problems.</p> -->
+          </div>
 
         <div class="row skills-content">
 
