--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas has dedicated the past seven years of his career to building and managing partnerships with government, non-profit and private stakeholders that embrace alternative and emerging transportation approaches in an era of dynamic mobility challenges and opportunities. By leading plans, policies, programs, and infrastructure investments that create more walkable, bikeable, and transit-friendly places, he has helped improve climate and social resilience in communities across the country.</p>
+          <p>Thomas has dedicated the past seven years of his career to building and managing partnerships with government, non-profit and private stakeholders that embrace alternative and emerging transportation approaches to dynamic mobility challenges and opportunities. By leading plans, policies, programs, and infrastructure investments that create more walkable, bikeable, and transit-friendly places, he has helped improve climate and social resilience in communities across the country.</p>
           <br>
-          <p>In his career, he has managed array of transportation projects from Vision Zero safety analyses to street design guidelines and mobility hub playbooks that make travel using transit and alternative modes more seamless and intuitive. He has contributed to multiple State Highway Safety Plans and Active Transportation Plans; led walk audits and Safe Routes to School travel plans; conducted complex demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has designed bikeshare stations and evaluated transportation programs for cities and MPOs.</p>
+          <p>He has managed a diverse array of transportation projects from Vision Zero safety analyses to street design guidelines and mobility hub playbooks that make travel using transit and alternative modes more seamless and intuitive. He has contributed to multiple State Highway Safety Plans and Active Transportation Plans; led walk audits and Safe Routes to School travel plans; conducted complex demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has designed bikeshare stations and evaluated transportation programs for cities and MPOs.</p>
           <br>
           <p>Thomas earned his Masters in City and Regional Planning, with a focus on Transportation Planning and a Graduate Certificate in Public Policy, from the Edward J. Bloustein School of Planning and Public Policy at Rutgers, the State University of New Jersey. He holds a BA in Political Studies with a concentration in Latin American Studies from Bard College.</p>
           
@@ -452,7 +452,7 @@
               </div>
             </div>
           </div>
-          
+
                     <div class="col-lg-4 col-md-6 portfolio-item filter-public-engagement filter-safety filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/pbic-webinar.png" class="img-fluid" alt="">
