--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas has dedicated the past seven years of his career to building and managing partnerships with government, non-profit and private stakeholders that embrace alternative and emerging transportation approaches to dynamic mobility challenges and opportunities. By leading plans, policies, programs, and infrastructure investments that create more walkable, bikeable, and transit-friendly places, he has helped improve climate and social resilience in communities across the country.</p>
+          <p>Thomas has dedicated the past seven years of his career to building and managing partnerships with government, non-profit and private stakeholders that embrace alternative and emerging approaches to dynamic mobility challenges. By leading plans, policies, programs, and infrastructure investments that create more walkable, bikeable, and transit-friendly places, he has helped improve climate and social resilience in communities across the country.</p>
           <br>
           <p>He has managed a diverse array of transportation projects from Vision Zero safety analyses to street design guidelines and mobility hub playbooks that make travel using transit and alternative modes more seamless and intuitive. He has contributed to multiple State Highway Safety Plans and Active Transportation Plans; led walk audits and Safe Routes to School travel plans; conducted complex demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has designed bikeshare stations and evaluated transportation programs for cities and MPOs.</p>
           <br>
