--- a/index.html
+++ b/index.html
@@ -322,12 +322,12 @@
               <h5>2019 - 2021</h5>
               <p><em>Toole Design, Silver Spring, MD </em></p>
               <ul>
-                <li>Managed the active transportation projects and safety analyses.</li>
-                <li>Oversaw the efficient use of production budgets ranging from $5,000 - $150,000+.</li> 
-                <li>Delegated tasks to and supported team members to deliver project components.</li>
-                <li>Created plan maps and graphics in GIS and Illustrator. Assessed analyses, reports, maps, and graphics to ensure quality and accuracy.</li>
+                <li>Managed active transportation projects and safety analyses.</li>
+                <li>Oversaw the efficient use of production budgets.</li> 
+                <li>Delegated tasks and supported team members.</li>
+                <li>Created analyses, reports, maps, and graphics.</li>
                 <li>Recommended Vision Zero and Safe Routes to School designs, policies, and countermeasures.</li>
-                <li>Presented webinars and led community and stakeholder meetings including charrettes and public engagement events.</li>
+                <li>Presented to community and stakeholder groups.</li>
               </ul>
             </div>
             <div class="resume-item">
