--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders on transportaiton plan, policy, and program development, he has helped decisionmakers to make infrastructure investments that reflect community values while improving climate and social resilience.</p>
+          <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders to develop transportaiton plans, policies, and programs, he has helped decisionmakers to make infrastructure investments that reflect community values while improving climate and social resilience.</p>
           <br>
           <p>He has managed a diverse array of transportation projects from Vision Zero safety analyses to toolkits highlighting proven safety countermeasures. He has contributed to State Highway Safety Plans and Active Transportation Plans; led walk audits and Safe Routes to School travel plans; conducted complex demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has designed bikeshare stations and evaluated transportation programs for cities and Metropolitan Planning Organizations.</p>
           <br>
