--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
             <div class="resume-item">
               <h4><i class="bi bi-mortarboard"></i>&nbsp Master of City and Regional Planning</h4>
               <h5>2015</h5>
-              <p><em>Edward J. Bloustin School of Planning and Public Policy, Rutgers University, New Brunswick, NJ</em></p>
-              <li>Concentration in Transportation Planning and Policy</l>
+              <p><em>Edward J. Bloustin School, Rutgers University, New Brunswick, NJ</em></p>
+              <li>Concentration in Transportation Planning</l>
               <li>Graduate Certificate in Public Policy</l>
             </div>
             <div class="resume-item">
