--- a/index.html
+++ b/index.html
@@ -281,10 +281,11 @@
               <li>Graduate Certificate in Public Policy</l>
             </div>
             <div class="resume-item">
-              <h4><i class="bi bi-mortarboard"></i>&nbsp Bachelor of Arts, Political Studies</h4>
+              <h4><i class="bi bi-mortarboard"></i>&nbsp Bachelor of Arts</h4>
               <h5>2010</h5>
               <p><em>Bard College, Annandale-on-Hudson, NY</em></p>
               <li>Thesis on Comparative Education Policy Reform</i></l>
+              <li>Major in Political Studies</li>
               <li>Minor in Latin American and Iberian Studies</l>
             </div>
 
