--- a/index.html
+++ b/index.html
@@ -324,11 +324,9 @@
               <p><em>Toole Design, Silver Spring, MD </em></p>
               <ul>
                 <li>Managed active transportation projects and safety analyses.</li>
-                <li>Oversaw the efficient use of production budgets.</li> 
-                <li>Delegated tasks and supported team members.</li>
                 <li>Created analyses, reports, maps, and graphics.</li>
                 <li>Recommended Vision Zero and Safe Routes to School designs, policies, and countermeasures.</li>
-                <li>Presented to community and stakeholder groups.</li>
+                <li>Presented to diverse community and stakeholder audiences.</li>
               </ul>
             </div>
             <div class="resume-item">
