--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Thomas Hillman, AICP</title>
+  <title>Thomas Hillman AICP</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,7 +41,7 @@
       <div class="profile justify-content-center align-items-center">
         <img src="assets/img/profile-img-bw2.png" alt="Thomas Headshot" class="img-fluid rounded-circle">
         <div class="d-flex flex-column justify-content-center align-items-center">
-          <h1 class="text-light justify-content-center align-items-center"><a href="index.html">Thomas N. Hillman, AICP</a></h1>
+          <h1 class="text-light justify-content-center align-items-center"><a href="index.html">Thomas Hillman AICP</a></h1>
         </div>
         <div class="social-links mt-3 text-center">
           <a href="mailto:thomasnhillman@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
@@ -69,7 +69,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Thomas N. Hillman, AICP</h1>
+      <h1>Thomas Hillman AICP</h1>
     </div>
     <div class="hero-container" data-aos="fade-in">
       <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe, Livable "></span>Mobility Planning</p>
