--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <h4><i class="bi bi-mortarboard"></i>&nbsp Bachelor of Arts</h4>
               <h5>2010</h5>
               <p><em>Bard College, Annandale-on-Hudson, NY</em></p>
-              <li>Thesis on Comparative Education Policy Reform</i></l>
+              <li>Thesis on Comparative Education Policy Reform in Argentina and Chile</i></l>
               <li>Major in Political Studies</li>
               <li>Minor in Latin American and Iberian Studies</l>
             </div>
