--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <h2>About</h2>
           <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders to develop transportaiton plans, policies, and programs, he has helped decisionmakers to make infrastructure investments that reflect community values while improving climate and social resilience.</p>
           <br>
-          <p>He has managed a diverse array of transportation projects from Vision Zero safety analyses to toolkits highlighting proven safety countermeasures. He has contributed to State Highway Safety Plans and Active Transportation Plans; led walk audits and Safe Routes to School travel plans; conducted complex demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has designed bikeshare stations and evaluated transportation programs for cities and Metropolitan Planning Organizations.</p>
+          <p>He has managed a diverse array of transportation projects. He has contributed to State Highway Safety Plans, Vision Zero Action Plans, and Active Transportation Plans; led walk audits and Safe Routes to School travel plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has designed bikeshare stations and performed transportation program evaluation for cities and Metropolitan Planning Organizations.</p>
           <br>
-          <p>Thomas earned his Master's in City and Regional Planning, with a focus on Transportation Planning and a Graduate Certificate in Public Policy, from the Edward J. Bloustein School of Planning and Public Policy at Rutgers, the State University of New Jersey. He holds a BA in Political Studies with a concentration in Latin American Studies from Bard College.</p>
+          <p>Thomas earned a Master's in City and Regional Planning, with a focus on transportation planning and policy development, from the Edward J. Bloustein School of Planning and Public Policy at Rutgers, the State University of New Jersey. He holds a BA in Political Studies with a concentration in Latin American Studies from Bard College.</p>
           
         </div>
 
