--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders to develop transportaiton plans, policies, and programs, he has helped decisionmakers to make infrastructure investments that reflect community values while increase climate and social resilience.</p>
+          <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders to develop transportaiton plans, policies, and programs, he has helped decisionmakers to guide infrastructure investments that reflect community values while increasing climate and social resilience.</p>
           <br>
           <p>He has managed a diverse array of transportation projects and contributed to State Highway Safety Plans, Vision Zero Action Plans, and Active Transportation Plans. Thomas has led walk audits and Safe Routes to School travel plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has planned bikeshare system station locations and site designs and evaluated transportation programs for cities and Metropolitan Planning Organizations.</p>
           <br>
