--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <h2>About</h2>
           <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders to develop transportaiton plans, policies, and programs, he has helped decisionmakers to guide infrastructure investments that reflect community values while increasing climate and social resilience.</p>
           <br>
-          <p>He has managed a diverse array of transportation projects and contributed to State Highway Safety Plans, Vision Zero Action Plans, and Active Transportation Plans. Thomas has led walk audits and Safe Routes to School travel plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has planned bikeshare system station locations and site designs and evaluated transportation programs for cities and Metropolitan Planning Organizations.</p>
+          <p>He has managed a diverse array of transportation projects including Vision Zero, bikeshare, and active transportation efforts. He has helped lead State Highway Safety Plans, Vision Zero Action Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
-          <p>Thomas earned a Master's in City and Regional Planning, with a focus on transportation planning and policy development, in 2015 from the Edward J. Bloustein School of Planning and Public Policy at Rutgers, the State University of New Jersey. He holds a BA in Political Studies with a concentration in Latin American Studies from Bard College.</p>
+          <p>Thomas earned his Master's in City and Regional Planning, with a focus on transportation planning and policy development, in 2015 from the Edward J. Bloustein School at Rutgers University. He holds a BA in Political Studies with a concentration in Latin American Studies from Bard College.</p>
           
         </div>
 
