--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <br>
           <p>He has managed a diverse array of transportation projects including Vision Zero, bikeshare, and active transportation efforts. He has helped lead State Highway Safety Plans, Vision Zero Action Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
-          <p>Thomas earned his Master's degree in City and Regional Planning, with a focus on transportation, in 2015 from the Edward J. Bloustein School at Rutgers University. He holds a BA in Political Studies with a concentration in Latin American Studies from Bard College.</p>
+          <p>Thomas earned his Master's degree in City and Regional Planning, with a focus on transportation, in 2015 from the Edward J. Bloustein School at Rutgers University. He holds a BA in Political Studies with a minor in Latin American Studies from Bard College.</p>
           
         </div>
 
