--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h1>Thomas Hillman AICP</h1>
     </div>
     <div class="hero-container" data-aos="fade-in">
-      <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe, Livable "></span>Mobility Planning</p>
+      <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe "></span>Mobility Planning</p>
     </div>  
      </section><!-- End Hero -->
 
@@ -284,9 +284,9 @@
               <h4><i class="bi bi-mortarboard"></i>&nbsp Bachelor of Arts</h4>
               <h5>2010</h5>
               <p><em>Bard College, Annandale-on-Hudson, NY</em></p>
-              <li>Thesis on Comparative Education Policy Reform in Argentina and Chile</i></l>
+              <!-- <li>Thesis on Comparative Education Policy Reform in Argentina and Chile</i></l>
               <li>Major in Political Studies</li>
-              <li>Minor in Latin American and Iberian Studies</l>
+              <li>Minor in Latin American and Iberian Studies</l> -->
             </div>
 
           <h3 class="resume-title">Awards and Presentations</h3>
@@ -294,25 +294,22 @@
             <h4><i class="bi bi-webcam"></i>&nbsp Pedestrian Safety and Arterial Streets</h4>
             <h5>2021</h5>
             <p><em>Pedestrian and Bicycle Information Center Webinar</em></p>
-            <li>Presented systemic safety approaches and solutions.</l>
-            <li>Researched and developed slide deck.</l>
-            <li>Informed participants on context-sensitive design measure selection.</l>
+            <li>Provided context on current pedestrian safety challenges.</l>
+            <li>Presented systemic context-sensitive design solutions.</l>
           </div>
           <div class="resume-item">
             <h4><i class="bi bi-award"></i>&nbsp 1st Place, Micromobility Sandbox Design Competition</h4>
             <h5>2020</h5>
             <p><em>Institute for Transportation Engineers</em></p>
-            <li>Led planning for winning urban corridor design.</l>
-            <li>Created graphics to communicate engineering vision.</l>
-            <li>Guided safety analysis and countermeasure selection.</l>
-            <li>Contributed to writing and layout of report.</li>
+            <li>Lead planner for winning urban corridor design.</l>
+            <li>Created graphics, guided safety analysis and countermeasures.</l>
+            <li>Helped write and layout competition entry.</li>
           </div>
           <div class="resume-item">
             <h4><i class="bi bi-webcam"></i>&nbsp Minnesota Systemic Pedestrian Safety Analysis</h4>
             <h5>2020</h5>
-            <p><em>Minnesota Transportation Conference Presentation</em></p>
-            <li>Co-led first statewide systemic safety analysis.</l>
-              <li>Developed slide deck and co-presented.</l>
+            <p><em>Minnesota Transportation Conference</em></p>
+            <li>Presented results of statewide systemic pedestrian safety analysis.</l>
           </div>
         </div>
 
