--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
               <h5>2019 - 2021</h5>
               <p><em>Toole Design, Silver Spring, MD </em></p>
               <ul>
-                <li>Managed active transportation projects and safety analyses.</li>
-                <li>Created analyses, reports, maps, and graphics.</li>
+                <li>Managed active transportation projects.</li>
+                <li>Created analyses, maps, graphics, and reports.</li>
                 <li>Recommended Vision Zero and Safe Routes to School designs, policies, and countermeasures.</li>
                 <li>Presented to diverse community and stakeholder groups.</li>
               </ul>
