--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <ul>
                 <li>Managed active transportation projects.</li>
                 <li>Created analyses, maps, graphics, and reports.</li>
-                <li>Recommended Vision Zero and Safe Routes to School designs, policies, and countermeasures.</li>
+                <li>Recommended Vision Zero and Safe Routes to School street designs, policies, and countermeasures.</li>
                 <li>Presented to diverse community and stakeholder groups.</li>
               </ul>
             </div>
