--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
               <h5>2019 - 2021</h5>
               <p><em>Toole Design, Silver Spring, MD </em></p>
               <ul>
-                <li>Managed active transportation projects.</li>
-                <li>Created analyses, maps, graphics, and reports.</li>
-                <li>Recommended Vision Zero and Safe Routes to School street designs, policies, and countermeasures.</li>
+                <li>Managed active transportation projects including design guidelines, bikeshare support, wayfinding plans, program evaluations, and communication toolkits.</li>
+                <li>Created complex demographic, economic, safety, and demand analyses. Recommended Vision Zero and Safe Routes to School street designs, policies, and countermeasures. </li>
+                <li>Communicated planning and design results via charts, maps, graphics, memos, and reports.</li>
                 <li>Presented to diverse community and stakeholder groups.</li>
               </ul>
             </div>
