--- a/ite-micromobility.html
+++ b/ite-micromobility.html
@@ -41,7 +41,7 @@
       <div class="profile justify-content-center align-items-center">
         <img src="assets/img/profile-img-bw2.png" alt="Thomas Headshot" class="img-fluid rounded-circle">
         <div class="d-flex flex-column justify-content-center align-items-center">
-          <h1 class="text-light justify-content-center align-items-center"><a href="index.html">Tom Hillman, AICP</a></h1>
+          <h1 class="text-light justify-content-center align-items-center"><a href="index.html">Thomas Hillman AICP</a></h1>
         </div>
         <div class="social-links mt-3 text-center">
           <a href="mailto:thomasnhillman@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
@@ -165,9 +165,10 @@
                   <center><img src="assets/img/portfolio/ite-micromobility-b.png" alt="Winning corridor design including roadway reallocation and safety treatments."></center>
                 </div>
 
-                <div class="swiper-slide">
+<!--                <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/ite-micromobility-c.png" alt="Winning corridor design including roadway reallocation and safety treatments."></center>
                 </div>
+-->
               </div>
               <div class="swiper-pagination"></div>
           </div>
@@ -192,17 +193,15 @@
             <div class="portfolio-description">
               <h2>Project Role</h2>
               <p>
-                Multimodal Transportation Planner
+                Multimodal Transportation Planning Lead
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Work Performed</h2>
               <p>
-                <li>Led all planning aspects of winning design.</li>
                 <li>Conducted economic, demographic, and safety analysis.</li> 
-                <li>Graphically communicated engineering design using Adobe Illustrator.</li> 
-                <li>Designed and implemented report layout in Adobe InDesign.</li> 
-                <li>Wrote report sections and served as an editor responsible for final competition entry submission.</li>
+                <li>Graphically communicated engineering concpet using Adobe Illustrator.</li> 
+                <li>Wrote report sections, laid out report in Adobe InDesign and served as editor responsible for final competition entry submission.</li>
               </p>
             </div>
           </div>
