--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -41,7 +41,7 @@
       <div class="profile justify-content-center align-items-center">
         <img src="assets/img/profile-img-bw2.png" alt="Thomas Headshot" class="img-fluid rounded-circle">
         <div class="d-flex flex-column justify-content-center align-items-center">
-          <h1 class="text-light justify-content-center align-items-center"><a href="index.html">Tom Hillman, AICP</a></h1>
+          <h1 class="text-light justify-content-center align-items-center"><a href="index.html">Thomas Hillman AICP</a></h1>
         </div>
         <div class="social-links mt-3 text-center">
           <a href="mailto:thomasnhillman@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
