--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
               <h5>2010</h5>
               <p><em>Bard College, Annandale-on-Hudson, NY</em></p>
               <!-- <li>Thesis on Comparative Education Policy Reform in Argentina and Chile</i></l>
-              <li>Major in Political Studies</li>
-              <li>Minor in Latin American and Iberian Studies</l> -->
+              <li>Major in Political Studies</li> -->
+              <li>Minor in Latin American and Iberian Studies</l> 
             </div>
 
           <h3 class="resume-title">Awards and Presentations</h3>
@@ -303,7 +303,7 @@
             <p><em>Institute for Transportation Engineers</em></p>
             <li>Lead planner for winning urban corridor design.</l>
             <li>Created graphics, guided safety analysis and countermeasures.</l>
-            <li>Helped write and layout competition entry.</li>
+            <li>Helped write and lay-out competition entry.</li>
           </div>
           <div class="resume-item">
             <h4><i class="bi bi-webcam"></i>&nbsp Minnesota Systemic Pedestrian Safety Analysis</h4>
