--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <li>Managed active transportation projects including design guidelines, bikeshare program support, wayfinding plans, evaluations, and communication toolkits.</li>
                 <li>Created complex demographic, economic, safety, and demand analyses. Recommended Vision Zero and Safe Routes to School street designs, policies, and countermeasures. </li>
                 <li>Communicated planning results via maps, charts, graphics, memos, presentations, and reports.</li>
-                <li>Conducted public outreach, including surveys, workshops, and on-line and in-person meetings, with community, business, and stakeholder groups.</li>
+                <li>Led public outreach, including surveys, workshops, and on-line and in-person events, with community, business, and stakeholder groups.</li>
               </ul>
             </div>
             <div class="resume-item">
