--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <h4><i class="bi bi-webcam"></i>&nbsp Minnesota Systemic Pedestrian Safety Analysis</h4>
             <h5>2020</h5>
             <p><em>Minnesota Transportation Conference</em></p>
-            <li>Presented results of statewide systemic pedestrian safety analysis.</l>
+            <li>Presented results of statewide systemic pedestrian safety analysis with state DOT partners.</l>
           </div>
         </div>
 
