--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -164,10 +164,11 @@
                   <center><img src="assets/img/portfolio/arlington-mobility-hubs-b.png" alt="Image of a mobility hub in Rosslyn, Arlington County featuring parking spaces repurposed fora parklet and capital bikeshare station."></center>
                 </div>
 
+                <!--
                 <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/arlington-mobility-hubs-c.png" alt="Mobility Hub Element Design Information for Dockless or Hybrid Micromobility Parking"></center>
                 </div>
-
+                -->
                 <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/arlington-mobility-hubs-d.png" alt="Mobility Hub Prototype Design Graphic"></center>
                 </div>
@@ -190,7 +191,7 @@
             <div class="portfolio-description">
               <h2>Project Details</h2>
               <p>
-                Arlington County received a grant from the Metropolitan Washington Council of Governments to develop a mobility hub guidebook and a prototype site concept design.
+                Mobility hub guidebook and concept design.
               </p>
             </div>
             <div class="portfolio-description">
@@ -202,10 +203,8 @@
             <div class="portfolio-description">
               <h2>Work Performed</h2>
               <p>
-                <li>Managed all aspects of project.</li>
-                <li>Led prototype mobility hub site selection and element placement.</li>
-                <li>Delegated draft concept design production.</li>
-                <li>Revised pilot hub based on client feedback.</li>
+                <li>Led prototype mobility hub site selection and concept design.</li>
+                <li>Worked with client to define a tailored mobility hub planning process.</li>
                 <li>Designed report document and served as primary contributing author and editor.</li>
               </p>
             </div>
