--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -204,8 +204,8 @@
               <h2>Work Performed</h2>
               <p>
                 <li>Led prototype mobility hub site selection and concept design.</li>
-                <li>Worked with client to tailor mobility hub planning process for their jurisdiction.</li>
-                <li>Designed report and served as primary author.</li>
+                <li>Worked with client to customize hub planning process for their jurisdiction.</li>
+                <li>Designed final report and served as primary author.</li>
               </p>
             </div>
           </div>
