--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -184,8 +184,8 @@
               <ul>
                 <li><strong>Category</strong>: Mobility Hubs</li>
                 <li><strong>Client</strong>: Metropolitan Washington Council of Governments (COG), Arlington County</li>
-                <li><strong>Project date</strong>: September, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://www.arlingtonva.us/Government/Projects/Plans-Studies/Transportation-Plans-Studies/Mobility-Hub-Guidebook" target="_blank">www.arlingtonva.us</a></li>
+                <li><strong>Date</strong>: September, 2021</li>
+                <li><strong>Final Report</strong>: <a href="https://www.arlingtonva.us/Government/Projects/Plans-Studies/Transportation-Plans-Studies/Mobility-Hub-Guidebook" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
